--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,22 @@
 alembic==1.0.8
+Babel==2.6.0
 bcrypt==3.1.6
 blinker==1.4
 cffi==1.12.1
 Click==7.0
+dominate==2.3.5
 elasticsearch==6.3.1
 Flask==1.0.2
+Flask-Babel==0.12.2
 Flask-Bcrypt==0.7.1
+Flask-Bootstrap==3.3.7.1
 Flask-Cors==3.0.7
 Flask-Login==0.4.1
 Flask-Mail==0.9.1
 Flask-Migrate==2.4.0
+Flask-Moment==0.7.0
 Flask-SQLAlchemy==2.3.2
+Flask-Table==0.5.0
 Flask-WTF==0.14.2
 itsdangerous==1.1.0
 Jinja2==2.10
@@ -19,9 +25,12 @@ MarkupSafe==1.1.0
 Pillow==5.4.1
 pycparser==2.19
 python-dateutil==2.8.0
+python-dotenv==0.10.1
 python-editor==1.0.4
+pytz==2018.9
 six==1.12.0
 SQLAlchemy==1.2.18
 urllib3==1.24.1
+visitor==0.1.3
 Werkzeug==0.14.1
 WTForms==2.2.1
