This is my first commit evar

--- a/app/.env
+++ b/app/.env
@@ -1,5 +1,5 @@
 SECRET_KEY=3e4c0a33c01d403094e66c2b9cc176b7
 MAIL_SERVER=localhost
 MAIL_PORT=25
-DATABASE_URL=mysql+pymysql://microblog:<db-password>@localhost:3306/microblog
+DATABASE_URL=mysql+pymysql://arhat:Battyrider1@localhost:3306/arhat
 MS_TRANSLATOR_KEY=<your-translator-key-here>
